--- a/playbook/deploy.yaml
+++ b/playbook/deploy.yaml
@@ -3,11 +3,17 @@
   gather_facts: false
   remote_user: root
   tasks:
-    - name: Creating the Container
+    - name: Stop existing container (if running)
+      shell: docker rm -f 66022747-nextjs-container || true
+
+    - name: Pull latest Docker image
+      shell: docker pull nattawut29427/66022747-nextjs:latest
+
+    - name: Run Next.js container
       docker_container:
-         name: 66022747-nextjs-container #docker container name
-         image: 66022747-nextjs:latest #docker image name
-         ports:
-           - "6666:3000" #เลข port ตัวแรกคือเลข  port ที่รับมาจาก browser ตัวหลังคือ  port ของ docker (คงไว้ที่ 80 ถ้าเป็น nextjs project ก็ 3000)
-         state: started
-         restart: true
+        name: 66022747-nextjs-container
+        image: nattawut29427/66022747-nextjs:latest
+        ports:
+          - "5424:3000"
+        state: started
+        restart_policy: always
